; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/extr_subsusf.c_DecodeBlock.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/extr_subsusf.c_DecodeBlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VLCDEC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @DecodeBlock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DecodeBlock(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %5, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32, i32* @VLCDEC_SUCCESS, align 4
  store i32 %10, i32* %3, align 4
  br label %25

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i32* @ParseText(i32* %12, i32* %13)
  store i32* %14, i32** %6, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @block_Release(i32* %15)
  %17 = load i32*, i32** %6, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %23

19:                                               ; preds = %11
  %20 = load i32*, i32** %4, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @decoder_QueueSub(i32* %20, i32* %21)
  br label %23

23:                                               ; preds = %19, %11
  %24 = load i32, i32* @VLCDEC_SUCCESS, align 4
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %23, %9
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32* @ParseText(i32*, i32*) #1

declare dso_local i32 @block_Release(i32*) #1

declare dso_local i32 @decoder_QueueSub(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
